# potator

./: CMakeLists.txt  readme.txt
src/: controls.c  controls.h  gpu.c  gpu.h  interrupts.c  interrupts.h  io.c  io.h  log.c  log.h  main.c  memory.c  memory.h  memorymap.c  memorymap.h  sound.c  sound.h  supervision.h  timer.c  timer.h  types.h  version.c  version.h  watara.c
src/m6502/: codes.h  m6502.c  m6502.h
